# LuttingerWard_from_ML

./: .gitignore  ML_framework_demo.ipynb  README.md  analysis_vertex.ipynb  conda_ml.yml  conda_plotting.yml  dev_seb.ipynb  main.py  test.py
code/: LossFunctions.py  Untitled.ipynb  colab_setup.ipynb  confmod_auto_encoder.json  confmod_graph_neural_network.json  data_preprocessing.py  load_data.py  model_AE.py  model_FC.py  models.py  plot_1.ipynb  pyproject.toml  train.py  train_AE.ipynb  train_AE.py  train_AE_forruns.ipynb  train_FC.py  train_GNN_cpu.py  train_cpu.py  utils.py  validate.ipynb  validate_COLAB.ipynb  vsc_LW_A100.slrm  vsc_LW_A100_4x.slrm  vsc_LW_A40_4x.slrm  vsc_LW_devel.slrm  wrapers.py
code/IO/: DataMod_AE.py
code/models/: Blocks.py  model_AE.py  model_AE_FC.py  model_FC.py  models.py
code/models/IO/: DataMod_AE.py  DataMod_FC.py
code/models/utils/: misc.py
code/utils/: LossFunctions.py  utils.py
code/wrappers/: wrapers.py  wrapper_AE.py
conda/: conda_ml24_1.yml
configs/: config.json  confmod_AE_FC.json  confmod_AE_FC_test.json  confmod_AE_GF.json  confmod_AE_SE.json  confmod_auto_encoder.json  confmod_auto_encoder_v2.json  confmod_graph_neural_network.json  confmod_graph_neural_network_2.json
notebooks/: PlotSimpleFCWeighted.ipynb  analysis_vertex.ipynb  colab_setup.ipynb  display_vertex.ipynb  plot_1.ipynb  train_AE.ipynb  train_AE_RevMat.ipynb  validate.ipynb  validate_COLAB.ipynb  validate_LW_GTrans.ipynb  validate_LW_SigmaTrans.ipynb  validate_LW_SigmaTrans_gnn.ipynb  validate_LW_all.ipynb  validate_LuttWard.ipynb  (+1 more)
(+97 files in other folders)
